# versioneye-core

./: .dockerignore  .gitignore  .ruby-gemset  Dockerfile  Dockerifle  Gemfile  LICENSE.txt  README.md  README.rdoc  Rakefile  VERSION  circle.yml  codeship-services.yml  codeship-steps.yml  docker-compose.yml  update_all.sh  versioneye-core-0.1.0.gem  versioneye-core.gemspec
ansible/: update_projects.yml
config/: aws.yml  log4r.xml  mongoid.yml  settings.json
coverage_save/: .last_run.json  .resultset.json  index.html
lib/: settings.rb  versioneye-core.rb
lib/versioneye/: cache.rb  comperators.rb  etcd.rb  etcd_client.rb  log.rb  model.rb  service.rb  settings.rb  version.rb
lib/versioneye/comperators/: github.rb
lib/versioneye/exporters/: sec_pdf_service.rb  version_pdf_service.rb
lib/versioneye/importers/: sap_team_user_importer.rb
lib/versioneye/mailers/: feedback_mailer.rb  lead_mailer.rb  license_mailer.rb  newsletter_mailer.rb  notification_mailer.rb  project_mailer.rb  receipt_mailer.rb  submitted_url_mailer.rb  subscription_mailer.rb  super_mailer.rb  team_mailer.rb  user_mailer.rb  versioncomment_mailer.rb  versioncommentreply_mailer.rb
lib/versioneye/migrations/: plan_to_orga_migration.rb  product_migration.rb  project_orga_migration.rb  versionlink_migration.rb
lib/versioneye/models/: api.rb  api_call.rb  (+83 more)
scripts/: major.sh  minor.sh  patch.sh  runtests_local.sh  runtests_podfile.sh  set_vars_for_dev.sh
spec/: spec_helper.rb  versioneye-core_spec.rb
spec/fixtures/files/cargo/: Cargo.toml
test/: helper.rb  test_versioneye-core.rb
(+487 files in other folders)
